--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
 fastapi==0.78.0
-IMDbPY==2021.4.18
-numpy==1.23.0
 pandas==1.4.3
-Pillow==9.2.0
+pyarrow
 pydantic==1.9.1
 requests==2.28.0
 scikit_learn==1.1.1
-scipy==1.8.1
+uvicorn
+httptools
+gunicorn
+numpy==1.23.0
+pandas==1.4.3
+Pillow==9.2.0
 spotipy==2.20.0
-streamlit==1.10.0
-tmdbv3api==1.7.7
