added books endpoint, backend and frontend folders

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,6 +2,8 @@ FROM python:3.8-slim-buster
 
 WORKDIR /app
 
+ENV PORT 8000
+
 RUN apt-get -y update  && apt-get install -y \
   python3-dev \
   apt-utils \
@@ -17,4 +19,4 @@ RUN pip install -r requirements_api.txt
 
 COPY . .
 
-CMD gunicorn -k uvicorn.workers.UvicornWorker app:app --bind 0.0.0.0:$PORT
+CMD gunicorn -w 3 -k uvicorn.workers.UvicornWorker app:app --bind 0.0.0.0:$PORT
