--- a/.gitignore
+++ b/.gitignore
@@ -159,8 +159,7 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-# Zip files for the data
-*.zip
+# Untrack some unneeded files
 .vercel
 kaggle.json
 .gitpod.yml
