--- a/.github/ISSUE_TEMPLATE/feature-request.yml
+++ b/.github/ISSUE_TEMPLATE/feature-request.yml
@@ -5,17 +5,9 @@ body:
   - type: markdown
     attributes:
       value: |
-        Thanks for your interest in FastAPI! 🚀
+        Thanks for your interest in Media-Recommendation-Engine! 🚀
 
         Please follow these instructions, fill every question, and do every step. 🙏
-
-        I'm asking this because answering questions and solving problems in GitHub issues is what consumes most of the time.
-
-        I end up not being able to add new features, fix bugs, review pull requests, etc. as fast as I wish because I have to spend too much time handling issues.
-
-        All that, on top of all the incredible help provided by a bunch of community members, the [FastAPI Experts](https://fastapi.tiangolo.com/fastapi-people/#experts), that give a lot of their time to come here and help others.
-
-        That's a lot of work they are doing, but if more FastAPI users came to help others like them just a little bit more, it would be much less effort for them (and you and me 😅).
 
         By asking questions in a structured way (following this) it will be much easier to help you.
 
