--- a/.gitignore
+++ b/.gitignore
@@ -120,7 +120,7 @@ celerybeat.pid
 *.sage.py
 
 # Environments
-.env
+#.env
 .venv
 env/
 venv/
@@ -164,8 +164,3 @@ cython_debug/
 kaggle.json
 .gitpod.yml
 .vscode/
-
-backend/
-frontend/
-tests/
-Notebooks/
