--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -19,4 +19,4 @@ RUN pip install -r requirements.txt
 
 COPY . .
 
-CMD gunicorn -w 3 -k uvicorn.workers.UvicornWorker app:app --bind 0.0.0.0:$PORT
+CMD gunicorn -w 1 -t 600 -k uvicorn.workers.UvicornWorker app:app --bind 0.0.0.0:$PORT
