--- a/.gitignore
+++ b/.gitignore
@@ -120,7 +120,7 @@ celerybeat.pid
 *.sage.py
 
 # Environments
-#.env
+.env
 .venv
 env/
 venv/
@@ -165,4 +165,3 @@ kaggle.json
 .gitpod.yml
 .vscode/
 *.pem
-*.env
