started working on the frontend

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -19,4 +19,7 @@ RUN pip install -r requirements.txt
 
 COPY . .
 
+EXPOSE 8000
+
 CMD gunicorn -w 1 -t 600 -k uvicorn.workers.UvicornWorker app:app --bind 0.0.0.0:$PORT
+
