--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,22 @@
 version: "3.7"
 
 services:
+  frontend:
+    build: frontend
+    ports:
+      - 8501:8501
+    networks: 
+      AIservice: 
+        aliases: 
+          - frontend.docker
+    depends_on:
+      - backend
+    volumes:
+        - ./frontend:/app
+        - ./storage:/storage
+
   backend:
     build: backend
-    image: nneji123/backend
     ports:
       - 8000:8000
     networks: 
